--- a/advice.html
+++ b/advice.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sterling & Sterling Law - Life's Little Swims: Our Humorous Insights</title>
+    <title>Sterling & Sterling Law - Poolside Insights & Legal Strokes</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="attorneys.html">Attorneys</a></li>
-                <li><a href="advice.html">Life's Little Swims</a></li>
+                <li><a href="advice.html">Poolside Insights</a></li>
                 <li><a href="freeadvice.html">Free Consult</a></li>
                 <li><a href="request.html">Request a Consult</a></li>
                 <li><a href="sponsor.html">Sponsors</a></li>
@@ -27,49 +27,49 @@
 
     <main>
         <section class="content-section">
-            <h1>Life's Little Swims: Our Humorous Insights</h1>
-            <p>Welcome to our lighter side! While we're serious about law, we believe a good laugh and some quirky insights can make life's currents a little smoother. Here's some entirely non-legal, often watery, "advice" from the very serious (and slightly eccentric) minds at Sterling & Sterling Law.</p>
+            <h1>Poolside Insights & Legal Strokes</h1>
+            <p>Welcome to the deep end of legal thinking! At Sterling & Sterling Law, we believe even the most mundane activities, like a day at the pool, offer opportunities for absurd legal contemplation. Here's our entirely non-binding, hilariously serious "advice" for the aquatic enthusiast.</p>
 
             <div class="insight-item">
-                <h2>The Case of the Missing Classmate: Can You Sue?!</h2>
-                <p>Imagine this: You show up to class, bright-eyed and bushy-tailed, ready to absorb knowledge. But then you notice... someone's missing. That empty chair. That void where your study buddy should be. And suddenly, you feel a profound sense of injustice. **Can the students who showed up sue the student who didn't?**</p>
-                <p>Absolutely! (In the whimsical court of Sterling & Sterling Law, that is). We believe a strong case can be made for:</p>
+                <h2>The Case of the Overly Enthusiastic Splasher: Breach of Pool Etiquette?</h2>
+                <p>Picture this: you're enjoying a tranquil float, perhaps contemplating the profound legal implications of proper lane discipline, when suddenly... *SPLASH!* A rogue wave, seemingly originating from a nearby juvenile delinquent (or perhaps just an adult having too much fun), drenches you. **Can you sue the person who splashed you?**</p>
+                <p>From a purely theoretical, entertainment-only legal perspective, we believe a compelling case could be argued for:</p>
                 <ul>
-                    <li>**Emotional Distress:** Their absence caused undue worry and a distinct lack of shared notes.</li>
-                    <li>**Loss of Camaraderie:** You missed out on their brilliant (or at least entertaining) class comments.</li>
-                    <li>**Breach of Unwritten Social Contract:** There's an unspoken agreement among classmates: "We suffer together." Their absence violated that sacred bond.</li>
-                    <li>**Contribution to General Classroom Dullness:** Without their unique presence, the intellectual vibrancy of the room was demonstrably diminished.</li>
+                    <li>**Battery (Aquatic Variant):** The unwanted contact of water, clearly inflicted with intent (or at least reckless disregard for your dry state).</li>
+                    <li>**Emotional Distress (Mild to Moderate):** The shock, the ruined hair, the sudden chill – these are undeniable injuries to one's poolside serenity.</li>
+                    <li>**Trespass to Person (Liquid):** Their water entered your personal space without permission. A clear violation!</li>
+                    <li>**Breach of Unwritten Pool Compact:** All swimmers implicitly agree to maintain a reasonable splash radius. Violation of this compact can lead to a *sternly worded cease-and-desist towel-wagging*.</li>
                 </ul>
-                <p class="important-note">**Our Legal Counsel (Humorous):** While actual courts might not entertain a "lack of classmate presence" lawsuit, we commend your dedication to justice! For real legal grievances, please <a href="request.html">contact us</a>. For missing classmates, try a "Where's Waldo?" search party or a strongly worded passive-aggressive text message.</p>
+                <p class="important-note">**Our Legal Counsel (Humorous):** While actual courts might find this case... *fluid*, we stand by your right to dry dignity! For real grievances involving unexpected drenchings in a legal context, please <a href="request.html">contact us</a>. For poolside splashers, a direct glare or a strategic counter-splash might suffice.</p>
             </div>
 
             <div class="insight-item">
-                <h2>Your Lawyer's Guide to Optimal Swimming Laps</h2>
-                <p>You're at the edge of the pool, goggles on, swim cap perfectly aligned. But a crucial question bubbles up: **"How many laps should I do?"** Fear not! Your trusted legal advisors at Sterling & Sterling Law are here to provide definitive (and entirely non-athletic) guidance.</p>
-                <p>Based on our extensive research into the nuances of aquatic exertion and the potential for premature wrinkling, we advise the following:</p>
+                <h2>Your Lawyer's Official Daily Swim Quota: A Legal Mandate?</h2>
+                <p>You've paid your membership, you're at the 25-meter pool, and you're ready to swim. But a nagging question surfaces: **"How far should I go today?"** Worry no more! The esteemed legal minds at Sterling & Sterling Law have conducted exhaustive (and entirely fictional) studies to determine your optimal daily aquatic output.</p>
+                <p>Our official legal recommendation for daily swimming, based on a 25-meter pool, is to complete **at least 2,500 meters total per day.**</p>
                 <ul>
-                    <li>**The "Minimum Viable Effort" Rule:** At least 3 laps. This legally demonstrates your intent to swim and avoids any accusations of merely loitering by the water feature.</li>
-                    <li>**The "Optimum for Avoiding Pruniness" Guideline:** No more than 15 laps in a single session. Beyond this, the risk of epidermal saturation and an unfortunate resemblance to dried fruit significantly increases. We're here to protect your physical, and aesthetic, integrity.</li>
-                    <li>**The "Pre-Lunch Power Swim" Clause:** If swimming before a meal, perform exactly 7.5 laps. This is the legally recognized number to justify an extra cookie without fear of karmic retribution.</li>
-                    <li>**The "Post-Dispute De-Stress" Protocol:** After a particularly trying legal negotiation (or a heated argument about who gets the last slice of pizza), aim for 20 laps. This is a court-sanctioned method of washing away stress, albeit one that doesn't hold up in a motion to dismiss.</li>
+                    <li>**The "Minimum Due Diligence" Clause:** Anything less than 2,500 meters constitutes a suboptimal utilization of pool resources and potentially a breach of your own personal wellness contract.</li>
+                    <li>**The "Efficiency & Endurance" Protocol:** Reaching 2,500 meters (that's 100 laps, for the record) demonstrates a laudable commitment to both cardiovascular health and the principle of "getting your money's worth."</li>
+                    <li>**The "Avoiding Idleness" Stipulation:** Our lawyers advise that remaining stationary for extended periods in the shallow end, while legally permissible, does not contribute to the overall aquatic GDP.</li>
+                    <li>**The "Strategic Hydration" Addendum:** For every 500 meters completed, we legally sanction a small, refreshing beverage. Hydration is key to avoiding poolside litigation over dehydration-induced grumpiness.</li>
                 </ul>
-                <p>Remember, these are not medically, scientifically, or even logically sound recommendations. They are, however, delivered with the full gravitas of a law firm that occasionally ponders the deeper meaning of chlorinated water.</p>
-                <p><strong>Legal Ramification (Humorous):</strong> Ignoring these lap guidelines may result in a self-imposed "contempt of pool" charge, leading to excessive splashing and questionable tan lines.</p>
+                <p>Please note: While these directives are delivered with the utmost legal solemnity, they are designed for your amusement. We are not certified swimming coaches, nor do we possess any actual medical or fitness expertise. But we *can* draw up very official-looking documents!</p>
+                <p><strong>Legal Ramification (Humorous):</strong> Failure to meet the 2,500-meter quota may result in a formal "Notice of Under-Utilization of Aquatic Facilities," enforceable only by your conscience and possibly a disappointed pool lifeguard.</p>
             </div>
 
             <div class="insight-item">
                 <h2>Other Humorous Legal Scenarios (Not For Real Life)</h2>
                 <ul>
-                    <li><strong>The Persistent Pen-Clicker Class Action:</strong> If someone in the library consistently clicks their pen, can you sue them for noise pollution and intellectual interference? Our verdict: While annoying, it's generally not actionable. Unless they sign a written contract promising pen-click silence, then we have a case!</li>
-                    <li><strong>The Case of the Overly Enthusiastic Greeting:</strong> If your dog greets you with such exuberance that you trip, can you sue the dog for assault and battery? Legally, dogs typically aren't liable. Emotionally, it's a complicated relationship. We advise training, not litigation.</li>
-                    <li><strong>The Great Coffee Spill Conspiracy:</strong> Your coffee mug mysteriously tips over every Tuesday. Is this a pattern of negligence by inanimate objects, or a conspiracy led by rogue spills? We're taking depositions from the kitchen counter, but the evidence is circumstantial.</li>
+                    <li><strong>The Mysterious Case of the Missing Pool Noodle:</strong> If your favorite pool noodle vanishes, can you sue for theft of aquatic comfort? We're preparing subpoenas for all inflatable objects in the vicinity.</li>
+                    <li><strong>The Lane Hogging Infraction:</strong> When someone consistently swims diagonally, thereby encroaching on your designated lane space, is that actionable trespass? We're considering a class-action lawsuit on behalf of all straight-swimming citizens.</li>
+                    <li><strong>The Sun Lounger Squatter:</strong> If someone leaves a towel on a prime sun lounger for hours without returning, is that a form of illegal occupation? We're drafting an "Eviction Notice for Unattended Towels."</li>
                 </ul>
             </div>
 
             ---
 
             <p class="disclaimer">
-                **Disclaimer:** The "advice" on this page is purely for entertainment purposes and should not be taken as actual legal, medical, or life guidance. Sterling & Sterling Law specializes in legitimate legal matters, not disputes with inanimate objects, personal fitness regimens, or the existential dilemmas of lost socks. For real legal assistance, please visit our other pages and <a href="contact.html">contact us directly</a>.
+                **Disclaimer:** The "advice" on this page is purely for entertainment purposes and should not be taken as actual legal, medical, or life guidance. Sterling & Sterling Law specializes in legitimate legal matters, not disputes over splashes, swimming distances, or poolside etiquette. For real legal assistance, please visit our other pages and <a href="contact.html">contact us directly</a>.
             </p>
 
         </section>
