--- a/advice.html
+++ b/advice.html
@@ -58,12 +58,31 @@
             </div>
 
             <div class="insight-item">
-                <h2>Other Humorous Legal Scenarios (Not For Real Life)</h2>
+                <h2>The Case of the Missing Swimmer: Can You Sue for a Missed Class?</h2>
+                <p>You showed up to swimming class, ready to conquer the freestyle, only to find that one key individual – **The Absent One** – didn't. This isn't just a simple absence; it's a profound disruption to the aquatic ecosystem! **Can you sue this individual for missing their swimming class for the day?**</p>
+                <p>Absolutely! In the hallowed (and chlorine-scented) halls of Sterling & Sterling Law, we see several compelling grounds for immediate litigation:</p>
                 <ul>
-                    <li><strong>The Mysterious Case of the Missing Pool Noodle:</strong> If your favorite pool noodle vanishes, can you sue for theft of aquatic comfort? We're preparing subpoenas for all inflatable objects in the vicinity.</li>
-                    <li><strong>The Lane Hogging Infraction:</strong> When someone consistently swims diagonally, thereby encroaching on your designated lane space, is that actionable trespass? We're considering a class-action lawsuit on behalf of all straight-swimming citizens.</li>
-                    <li><strong>The Sun Lounger Squatter:</strong> If someone leaves a towel on a prime sun lounger for hours without returning, is that a form of illegal occupation? We're drafting an "Eviction Notice for Unattended Towels."</li>
+                    <li>**Breach of Expected Synchronicity:** Without them, the carefully choreographed waves and splashes are now out of sync. This causes aesthetic and hydrodynamic damages!</li>
+                    <li>**Emotional Distress (from Unfulfilled Expectations):** You prepared yourself to witness their unique brand of backstroke. Their absence left an emotional void.</li>
+                    <li>**Contribution to Disproportionate Lane Usage:** Their empty spot meant others had to swim slightly more crowded, potentially causing friction and minor collisions. That's a tort!</li>
+                    <li>**Theft of Potential Inspiration:** Maybe they were the one who always had the coolest goggles, or that strangely motivating underwater flip turn. Their absence robbed you of vital inspiration.</li>
+                    <li>**Causing a Disturbance in the Force (of the Pool):** The collective energy of a full class was compromised, leading to a palpable dip in overall aquatic morale.</li>
                 </ul>
+                <p class="important-note">**Our Legal Counsel (Humorous):** While a real court might suggest better attendance policies or a buddy system, we champion your right to a perfectly attended swimming class! For genuine grievances or actual class attendance issues, please <a href="request.html">contact us</a>. For the missing swimmer, perhaps send them a strongly worded email about their "contempt of pool" violation.</p>
+            </div>
+
+            <div class="insight-item">
+                <h2>The Meltdown of Justice: Can You Sue for Melted Ice Cream?</h2>
+                <p>You bought a perfectly sculpted scoop of ice cream. It was a masterpiece of dairy engineering. You turned your back for a moment, perhaps to admire a particularly well-executed dive, and upon your return... **disaster.** A sad, sugary puddle where joy once stood. **Is this actionable in a court of law?**</p>
+                <p>At Sterling & Sterling Law, we believe the indignity of melted ice cream is a grave injustice! We posit several angles for a robust lawsuit:</p>
+                <ul>
+                    <li>**Negligent Confectionery Maintenance:** If the vendor failed to warn you about the sun's oppressive heat, or provided an inadequate cone, they could be liable.</li>
+                    <li>**Breach of Implied Deliciousness Warranty:** An ice cream cone implicitly promises a solid, enjoyable experience. A melted mess breaks this fundamental promise.</li>
+                    <li>**Emotional Damage (Grief and Disappointment):** The rapid transition from frozen delight to sticky despair can cause profound emotional turmoil. We're talking therapy-level emotional distress!</li>
+                    <li>**Damage to Personal Property (Your Hands):** The sticky residue left by the melted ice cream constitutes a nuisance and requires immediate cleansing, consuming valuable time.</li>
+                    <li>**Conspiracy of the Elements:** The sun, gravity, and ambient air temperature may be colluding to deprive you of joy. We're prepared to subpoena the meteorological data!</li>
+                </ul>
+                <p class="important-note">**Our Legal Counsel (Humorous):** While the Supreme Court of Snacks might not take this case, your pain is valid! For real consumer protection issues or actual property damage, please <a href="request.html">contact us</a>. For melted ice cream, we recommend swift consumption or a strategic napkin deployment.</p>
             </div>
 
             ---
