--- a/advice.html
+++ b/advice.html
@@ -62,10 +62,14 @@
                 <p>You showed up to swimming class, ready to conquer the freestyle, only to find that one key individual – **The Absent One** – didn't. This isn't just a simple absence; it's a profound disruption to the aquatic ecosystem! **Can you sue this individual for missing their swimming class for the day?**</p>
                 <p>Absolutely! In the hallowed (and chlorine-scented) halls of Sterling & Sterling Law, we see several compelling grounds for immediate litigation:</p>
                 <ul>
+
                     <li>**Breach of Expected Synchronicity:** Without them, the carefully choreographed waves and splashes are now out of sync. This causes aesthetic and hydrodynamic damages!</li>
                     <li>**Emotional Distress (from Unfulfilled Expectations):** You prepared yourself to witness their unique brand of backstroke. Their absence left an emotional void.</li>
                     <li>**Contribution to Disproportionate Lane Usage:** Their empty spot meant others had to swim slightly more crowded, potentially causing friction and minor collisions. That's a tort!</li>
-                    <li>**Theft of Potential Inspiration:** Maybe they were the one who always had the coolest goggles, or that strangely motivating underwater flip turn. Their absence robbed you of vital inspiration.</li>
+                    <li>**Emotional Distress:** Their absence caused undue worry and a distinct lack of shared notes.</li>
+                    <li>**Loss of Camaraderie:** You missed out on their brilliant (or at least entertaining) class comments.</li>
+                    <li>**Breach of Unwritten Social Contract:** There's an unspoken agreement among classmates: "We suffer together." Their absence violated that sacred bond.</li>
+                    <li>**Contribution to General Classroom Dullness:** Without their unique presence, the intellectual vibrancy of the room was demonstrably diminished.</li>
                     <li>**Causing a Disturbance in the Force (of the Pool):** The collective energy of a full class was compromised, leading to a palpable dip in overall aquatic morale.</li>
                 </ul>
                 <p class="important-note">**Our Legal Counsel (Humorous):** While a real court might suggest better attendance policies or a buddy system, we champion your right to a perfectly attended swimming class! For genuine grievances or actual class attendance issues, please <a href="request.html">contact us</a>. For the missing swimmer, perhaps send them a strongly worded email about their "contempt of pool" violation.</p>
