--- a/advice.html
+++ b/advice.html
@@ -40,7 +40,7 @@
                     <li>**Trespass to Person (Liquid):** Their water entered your personal space without permission. A clear violation!</li>
                     <li>**Breach of Unwritten Pool Compact:** All swimmers implicitly agree to maintain a reasonable splash radius. Violation of this compact can lead to a *sternly worded cease-and-desist towel-wagging*.</li>
                 </ul>
-                <p class="important-note">**Our Legal Counsel (Humorous):** While actual courts might find this case... *fluid*, we stand by your right to dry dignity! For real grievances involving unexpected drenchings in a legal context, please <a href="request.html">contact us</a>. For poolside splashers, a direct glare or a strategic counter-splash might suffice.</p>
+                <p class="important-note">**Our Legal Counsel:** While actual courts might find this case... *fluid*, we stand by your right to dry dignity! For real grievances involving unexpected drenchings in a legal context, please <a href="request.html">contact us</a>. For poolside splashers, a direct glare or a strategic counter-splash might suffice.</p>
             </div>
 
             <div class="insight-item">
@@ -54,7 +54,7 @@
                     <li>**The "Strategic Hydration" Addendum:** For every 500 meters completed, we legally sanction a small, refreshing beverage. Hydration is key to avoiding poolside litigation over dehydration-induced grumpiness.</li>
                 </ul>
                 <p>Please note: While these directives are delivered with the utmost legal solemnity, they are designed for your amusement. We are not certified swimming coaches, nor do we possess any actual medical or fitness expertise. But we *can* draw up very official-looking documents!</p>
-                <p><strong>Legal Ramification (Humorous):</strong> Failure to meet the 2,500-meter quota may result in a formal "Notice of Under-Utilization of Aquatic Facilities," enforceable only by your conscience and possibly a disappointed pool lifeguard.</p>
+                <p><strong>Legal Ramification:</strong> Failure to meet the 2,500-meter quota may result in a formal "Notice of Under-Utilization of Aquatic Facilities," enforceable only by your conscience and possibly a disappointed pool lifeguard.</p>
             </div>
 
             <div class="insight-item">
@@ -72,7 +72,7 @@
                     <li>**Contribution to General Classroom Dullness:** Without their unique presence, the intellectual vibrancy of the room was demonstrably diminished.</li>
                     <li>**Causing a Disturbance in the Force (of the Pool):** The collective energy of a full class was compromised, leading to a palpable dip in overall aquatic morale.</li>
                 </ul>
-                <p class="important-note">**Our Legal Counsel (Humorous):** While a real court might suggest better attendance policies or a buddy system, we champion your right to a perfectly attended swimming class! For genuine grievances or actual class attendance issues, please <a href="request.html">contact us</a>. For the missing swimmer, perhaps send them a strongly worded email about their "contempt of pool" violation.</p>
+                <p class="important-note">**Our Legal Counsel:** While a real court might suggest better attendance policies or a buddy system, we champion your right to a perfectly attended swimming class! For genuine grievances or actual class attendance issues, please <a href="request.html">contact us</a>. For the missing swimmer, perhaps send them a strongly worded email about their "contempt of pool" violation.</p>
             </div>
 
             <div class="insight-item">
@@ -86,14 +86,8 @@
                     <li>**Damage to Personal Property (Your Hands):** The sticky residue left by the melted ice cream constitutes a nuisance and requires immediate cleansing, consuming valuable time.</li>
                     <li>**Conspiracy of the Elements:** The sun, gravity, and ambient air temperature may be colluding to deprive you of joy. We're prepared to subpoena the meteorological data!</li>
                 </ul>
-                <p class="important-note">**Our Legal Counsel (Humorous):** While the Supreme Court of Snacks might not take this case, your pain is valid! For real consumer protection issues or actual property damage, please <a href="request.html">contact us</a>. For melted ice cream, we recommend swift consumption or a strategic napkin deployment.</p>
+                <p class="important-note">**Our Legal Counsel:** While the Supreme Court of Snacks might not take this case, your pain is valid! For real consumer protection issues or actual property damage, please <a href="request.html">contact us</a>. For melted ice cream, we recommend swift consumption or a strategic napkin deployment.</p>
             </div>
-
-            ---
-
-            <p class="disclaimer">
-                **Disclaimer:** The "advice" on this page is purely for entertainment purposes and should not be taken as actual legal, medical, or life guidance. Sterling & Sterling Law specializes in legitimate legal matters, not disputes over splashes, swimming distances, or poolside etiquette. For real legal assistance, please visit our other pages and <a href="contact.html">contact us directly</a>.
-            </p>
 
         </section>
     </main>
