--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sterling & Sterling Law - Home</title>
+    <title>Sterling & Sterling Law - Home of Humorous Legal Musings</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="attorneys.html">Attorneys</a></li>
-                <li><a href="advice.html">Legal Insights</a></li>
+                <li><a href="advice.html">Poolside Insights</a></li>
                 <li><a href="freeadvice.html">Free Consult</a></li>
                 <li><a href="request.html">Request a Consult</a></li>
                 <li><a href="sponsor.html">Sponsors</a></li>
@@ -27,50 +27,54 @@
 
     <main>
         <section class="hero">
-            <h1>Your Trusted Legal Advocates</h1>
-            <p>Providing expert legal solutions with integrity and dedication.</p>
-            <a href="contact.html" class="button">Schedule a Consultation</a>
+            <h1>Your Trusted Legal Advocates... for Life's Little Absurdities</h1>
+            <p>Providing expert legal solutions with integrity and a healthy dose of humor.</p>
+            <a href="contact.html" class="button">Schedule a (Serious) Consultation</a>
         </section>
 
         <section class="practice-areas">
-            <h2>Our Practice Areas</h2>
+            <h2>Our Highly Specialized (and Completely Fictional) Practice Areas</h2>
             <div class="area-grid">
                 <div class="area-card">
-                    <h3>Personal Injury</h3>
-                    <p>Fighting for your rights in accident claims, medical malpractice, and more.</p>
+                    <h3>Personal Splashing Injury</h3>
+                    <p>Fighting for your rights in unexpected pool-drenchings, rogue sprinkler incidents, and aggressive water balloon assaults.</p>
                 </div>
                 <div class="area-card">
-                    <h3>Family Law</h3>
-                    <p>Compassionate guidance through divorce, child custody, and family matters.</p>
+                    <h3>Melted Confectionery Law</h3>
+                    <p>Compassionate guidance through ice cream meltdowns, chocolate bar liquefaction, and all forms of dessert-related emotional distress.</p>
                 </div>
                 <div class="area-card">
-                    <h3>Corporate Law</h3>
-                    <p>Strategic legal advice for businesses, from startups to established corporations.</p>
+                    <h3>Absentee Classmate Litigation</h3>
+                    <p>Strategic legal advice for those wronged by no-shows in swimming classes, group projects, or even friendly coffee meet-ups.</p>
                 </div>
                 <div class="area-card">
-                    <h3>Real Estate Law</h3>
-                    <p>Expertise in property transactions, disputes, and landlord-tenant issues.</p>
+                    <h3>Inanimate Object Disputes</h3>
+                    <p>Expertise in legal battles against faulty toasters, sock-eating washing machines, and alarm clocks that betray your trust.</p>
                 </div>
             </div>
         </section>
 
         <section class="testimonials">
-            <h2>What Our Clients Say</h2>
+            <h2>What Our (Fictional) Clients Say</h2>
             <div class="testimonial-slider">
                 <div class="testimonial-item">
-                    <p>"Sterling & Sterling Law provided exceptional service and achieved a favorable outcome for my case. Highly recommend!"</p>
-                    <span>- Jane Doe</span>
+                    <p>"Sterling & Sterling Law got me justice for my soggy picnic! Truly dedicated to the pursuit of dry napkins."</p>
+                    <span>- Brenda G. (Picnic Enthusiast)</span>
                 </div>
                 <div class="testimonial-item">
-                    <p>"Professional, knowledgeable, and always responsive. They made a difficult process much easier."</p>
-                    <span>- John Smith</span>
+                    <p>"My ice cream melted, and I felt profound despair. Their empathetic approach to dessert-related trauma was unparalleled."</p>
+                    <span>- Kevin L. (Dessert Connoisseur)</span>
+                </div>
+                <div class="testimonial-item">
+                    <p>"Professional, knowledgeable, and they truly understood my anguish over that missing swim class partner. Five stars for absurd advocacy!"</p>
+                    <span>- Chloe P. (Aspiring Swimmer)</span>
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Sterling & Sterling Law. All rights reserved.</p>
+        <p>© 2025 Sterling & Sterling Law. All rights reserved.</p>
         <div class="social-links">
             <a href="#">Facebook</a>
             <a href="#">LinkedIn</a>
