--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
 
         <section class="practice-areas">
-            <h2>Our Highly Specialized (and Completely Fictional) Practice Areas</h2>
+            <h2>Our Highly Specialized Practice Areas</h2>
             <div class="area-grid">
                 <div class="area-card">
                     <h3>Personal Splashing Injury</h3>
