--- a/advice.html
+++ b/advice.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="attorneys.html">Attorneys</a></li>
-                <li><a href="advice.html">Poolside Insights</a></li>
+                <li><a href="advice.html">Legal Insights</a></li>
                 <li><a href="freeadvice.html">Free Consult</a></li>
                 <li><a href="request.html">Request a Consult</a></li>
                 <li><a href="sponsor.html">Sponsors</a></li>
