--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </section>
 
         <section class="testimonials">
-            <h2>What Our (Fictional) Clients Say</h2>
+            <h2>What Our Clients Say</h2>
             <div class="testimonial-slider">
                 <div class="testimonial-item">
                     <p>"Sterling & Sterling Law got me justice for my soggy picnic! Truly dedicated to the pursuit of dry napkins."</p>
